<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.leoliebig.simpLISTic.view.EditTaskFragment">
    <item
        android:id="@+id/action_task_save"
        android:orderInCategory="100"
        android:title="@string/save"
        app:showAsAction="always"
        android:icon="@drawable/menu_okay"
        />
    <item
        android:id="@+id/action_task_discard"
        android:title="@string/discard"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/menu_cancel"
        />
    <item
        android:id="@+id/action_task_delete"
        android:title="@string/delete"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/menu_delete"
        />
</menu>
